# horsecrab

./: .env.dev  Cargo.toml  PROJECT.md  README.md
migration/src/: m20251122_212357_create_users_table.rs  m20251122_213125_seed_users_table.rs  m20251124_040703_create_topics_table.rs  m20251124_054355_seed_topics_table.rs
public/css/: global.css
src/: main.rs
src/database/: setup.rs
src/database/entities/: mod.rs  prelude.rs  topics.rs  users.rs
src/models/: mod.rs  pages.rs  requests.rs
src/routes/: home.rs  index.rs  layout.rs  login.rs  mod.rs  registration.rs
src/services/: mod.rs  post_service.rs  service_trait.rs  topic_service.rs  user_service.rs
src/utilities/: auth.rs  mod.rs  page.rs  password.rs
tools/: main.py
tools/templates/: route.template
views/: index.template.html  layout.rs.html  layout.template.html  login.rs.html  registration.rs.html
