[package]
name = "horsecrab"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
argon2 = "0.5.3"
dotenv = "0.15.0"
lol_html = "2.7.0"
mlua = { version = "0.11.4", features = ["lua54", "vendored", "serde"] }
regex = "1.12.2"
rocket = "0.5.1"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-uuid" ] }
serde = "1.0.228"
erased-serde = "0.4"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = "0.4.42"
anyhow = "1.0.100"

[dependencies.lawl]
path = "../lawl"

[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
] 

[build-dependencies]
rshtml = "0.3.0"

[package.metadata.rshtml]
views = { path = "views", layout = "layout.rs.html", extract_file_on_debug = false }
